Change primary index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<script>
 					function openWelcomePage()
 					{
-						iframe.src = "html/_welcome.html";
+						iframe.src = "html/welcome.html";
 						document.body.appendChild(iframe);
 					}
 				</script>
