Editing welcome page

--- a/html/basicScene.html
+++ b/html/basicScene.html
@@ -12,7 +12,16 @@
 
 		<p>In this example...</p>
 
-		<h2>Using mouse to interact with the object</h2>
+		<h2>Example of code above.</h2>
+
+		<code>
+		var geometry = new THREE.BoxGeometry();
+		var material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
+		var cube = new THREE.Mesh( geometry, material );
+		scene.add( cube );
+
+		camera.position.z = 5;
+		</code>
 
 		<p>...</p>
 
