--- a/html/welcome.html
+++ b/html/welcome.html
@@ -6,11 +6,21 @@
 		<link type="text/css" rel="stylesheet" href="resources/page.css" />
 	</head>
 	<body>
-		<h1>Welcome</h1>
+		<h1>Computer Graphics Course</h1>
+		<br>
+		<hr>
 
-		<p>In this page...</p>
+		<p>On this page you will find the basic projects that support the Computer Graphics course of the undergraduate Computer Science at UFJF.</p>
 
-		<h2>Subtitle</h2>
+		<p>All projects were developed in [link:https://threejs.org three.js], a cross-browser JavaScript / API library used to create and display animated 3D graphics on the web.</p>
+
+		<h2>Topics</h2>
+
+		<p>On this page you will find [link:https://threejs.org three.js] projects regarding geometric models, 3D object modeling, scene and virtual camera concepts, lighting and texture. </p>
+
+		<p>Additionally you will find examples of more advanced techniques such as raytracing, virtual and augmented reality.</p>
+
+
 
 	</body>
 </html>
