--- a/html/welcome.html
+++ b/html/welcome.html
@@ -14,11 +14,12 @@
 
 		<p>All projects were developed in [link:https://threejs.org three.js], a cross-browser JavaScript / API library used to create and display animated 3D graphics on the web.</p>
 
-		<h2>Topics</h2>
+		<h2>Contents</h2>
 
-		<p>On this page you will find [link:https://threejs.org three.js] projects regarding geometric models, 3D object modeling, scene and virtual camera concepts, lighting and texture. </p>
+		<p>You will find in this page projects regarding geometric models, 3D object modeling, scene and virtual camera concepts and topics about lighting and texture usage. </p>
 
-		<p>Additionally you will find examples of more advanced techniques such as raytracing, virtual and augmented reality.</p>
-
+		<p>Additionally you will find examples of more advanced techniques such as raytracing, virtual reality and augmented reality.</p>
+		<br>
+		<hr>
 	</body>
 </html>
