--- a/html/welcome.html
+++ b/html/welcome.html
@@ -1,6 +1,6 @@
 <html lang="en">
 	<head>
-    <title></title>
+    		<title>CG</title>
 		<meta charset="utf-8">
 		<script src="resources/page.js"></script>
 		<link type="text/css" rel="stylesheet" href="resources/page.css" />
@@ -10,7 +10,7 @@
 		<br>
 		<hr>
 
-		<p>On this page you will find the basic projects that support the Computer Graphics course of the undergraduate Computer Science at UFJF.</p>
+		<p>On this page you will find the basic projects that support the Computer Graphics course at [link:https://www2.ufjf.br/ufjf/ UFJF].</p>
 
 		<p>All projects were developed in [link:https://threejs.org three.js], a cross-browser JavaScript / API library used to create and display animated 3D graphics on the web.</p>
 
@@ -19,7 +19,6 @@
 		<p>You will find in this page projects regarding geometric models, 3D object modeling, scene and virtual camera concepts and topics about lighting and texture usage. </p>
 
 		<p>Additionally you will find examples of more advanced techniques such as raytracing, virtual reality and augmented reality.</p>
-		<br>
 		<hr>
 	</body>
 </html>
