First person example (incomplete)

--- a/src/test.html
+++ b/src/test.html
@@ -5,7 +5,7 @@
 <head>
     <title>Testing...</title>
     <link rel="shortcut icon" href="../favicon.ico">
-    <link rel="stylesheet" href="../libs/css/default.css">
+    <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
     <script src="../libs/util/dat.gui.js"></script>
@@ -13,7 +13,7 @@
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/OrbitControls.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/Stats.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/dat.gui.min.js"></script>
-        
+
     <script type="text/javascript" charset="UTF-8" src="../libs/util/util.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/KeyboardState.js"></script>
     <script type="text/javascript" charset="UTF-8" src="test.js"></script>
