--- a/src/AR_Basic.html
+++ b/src/AR_Basic.html
@@ -5,9 +5,9 @@
 <head>
     <title></title>
     <link rel="shortcut icon" href="../favicon.ico">
-    <link rel="stylesheet" href="../libs/css/default.css">
+    <link rel="stylesheet" href="../html/resources/default.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">    
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <!-- Changing viewport mess with AR Projection
     <meta name="viewport" content="width=device-width, initial-scale=1">
     -->
