--- a/src/raytracingExample2.html
+++ b/src/raytracingExample2.html
@@ -5,7 +5,7 @@
 <head>
     <title></title>
     <link rel="shortcut icon" href="../favicon.ico">
-    <link rel="stylesheet" href="../libs/css/default.css">
+    <link rel="stylesheet" href="../html/resources/default.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Working better in an old version of three.js --------------->
