--- a/indexBasic.html
+++ b/indexBasic.html
@@ -33,7 +33,7 @@
   <a href="src/projection.html" target="_blank">Projection</a><br>
   <a href="src/geometricTransformation.html" target="_blank">Geometric Transformation</a><br>
 
-  <a href="src/articulatedArm.html" target="_blank">Articulated Arm</a><br>
+  <a href="src/geometricTransformation2.html" target="_blank">Articulated Arm</a><br>
   <a href="src/animation.html" target="_blank">Animation</a><br>
   <a href="src/animationExternalObjects.html" target="_blank">Animation - External Objects</a><br>
 
