--- a/src/geometricTransformation2.html
+++ b/src/geometricTransformation2.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" charset="UTF-8" src="../libs/util/dat.gui.min.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/util.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/KeyboardState.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="articulatedArm.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="geometricTransformation2.js"></script>
 </head>
 
 <body>
