--- a/html/geometriesBasicInfo.html
+++ b/html/geometriesBasicInfo.html
@@ -8,18 +8,38 @@
 		<link type="text/css" rel="stylesheet" href="resources/page.css" />
 	</head>
 	<body>
-		<h1>Title</h1>
+		<h1>Geometries - Basic</h1>
 		<br>
 		<hr>
 
-		<p>In this example...</p>
-
-		<h2>About...</h2>
-
-		<p>...</p>
+		<p>There are many ways to work with geometries in <strong>threejs</strong>. The easiest way to start working with geometries is by using the available 3D primitives. You can easily create cubes, spheres, torus and other basic geometries just by setting some basic parameteres of each object. See the example below and change the object to be rendered through the drop down list available.</p>
 
 		<iframe src="../src/geometriesBasic.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
 		<a href="../src/geometriesBasic.html" target="_blank">Open in a new tab</a>
+
+		<h2>Some examples</h2>
+
+		<p>
+			Just to illustrate how the creation of objects in <strong>threejs</strong> is easy, see the code below to understand which parameters must be provided to create an sphere. Basically you have to inform the radius of the sphere, number of horizontal and vertical segments. You can use default parameters but at least these three are suggested to be set. The <i>objectMaterial</i> used in this example will be explored in further examples.
+		</p>
+
+		<code>
+		var radius = 3.0;
+		var widthSegments = 20;
+		var heightSegments = 20;
+		var geometry = new THREE.SphereGeometry(radius, widthSegments, heightSegments);
+		var sphere = new THREE.Mesh(geometry, objectMaterial);
+		scene.add(sphere);
+		</code>
+
+		<p>
+			There are additional parameters that can be explored like starting angle (vertical and horizontal) to create spheres like the one presented in Figure 1.
+		</p>
+
+		<figure>
+			<img src="img/sphere.png" width="800">
+		  <figcaption>Figure 1 - Sphere with <i>phiStart = 2.0</i> and <i>phiLenght = 4.8</i> (<a href="https://threejs.org/docs/#api/en/geometries/SphereGeometry" target="_blank">source</a>)</figcaption>
+		</figure>
 
 	</body>
 </html>
