Geometric Basic info OK

--- a/html/geometriesBasicInfo.html
+++ b/html/geometriesBasicInfo.html
@@ -17,7 +17,7 @@
 		<iframe src="../src/geometriesBasic.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
 		<a href="../src/geometriesBasic.html" target="_blank">Open in a new tab</a>
 
-		<h2>Some examples</h2>
+		<h2>Setting parameters</h2>
 
 		<p>
 			Just to illustrate how the creation of objects in <strong>threejs</strong> is easy, see the code below to understand which parameters must be provided to create an sphere. Basically you have to inform the radius of the sphere, number of horizontal and vertical segments. You can use default parameters but at least these three are suggested to be set. The <i>objectMaterial</i> used in this example will be explored in further examples.
