Geometric Lathe info OK

--- a/html/geometriesBasicInfo.html
+++ b/html/geometriesBasicInfo.html
@@ -38,7 +38,7 @@
 
 		<figure>
 			<img src="img/sphere.png" width="800">
-		  <figcaption>Figure 1 - Sphere with <i>phiStart = 2.0</i> and <i>phiLenght = 4.8</i> (<a href="https://threejs.org/docs/#api/en/geometries/SphereGeometry" target="_blank">source</a>)</figcaption>
+		  <figcaption>Figure 1 - Sphere with <i>phiStart = 2.0</i> and <i>phiLenght = 4.8</i></figcaption>
 		</figure>
 
 	</body>
